src/test/ui/consts/const_fn_unsize.stock.stderr
error[E0658]: unsizing casts to types besides slices are not allowed in const fn
  --> $DIR/const_fn_unsize.rs:11:14
   |
LL |     let _x = NonNull::<[i32; 0]>::dangling() as NonNull<[i32]>;
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #64992 <https://github.com/rust-lang/rust/issues/64992> for more information
   = help: add `#![feature(const_fn_unsize)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
